# closest-to-you

./: README.md  db.sqlite3  manage.py  pyproject.toml
closest_to_you/: asgi.py  settings.py  urls.py  wsgi.py
docs/: conf.py  modules.rst  shop.migrations.rst  shop.rst
docs/_build/doctrees/: closest_to_you.doctree  environment.pickle  index.doctree  manage.doctree  modules.doctree  shop.doctree  shop.migrations.doctree  shop.services.doctree  shop.views.doctree
docs/_build/html/: .buildinfo  closest_to_you.html  genindex.html  index.html  manage.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  shop.html  shop.migrations.html  shop.services.html  shop.views.html
docs/_build/html/_modules/: index.html  manage.html
docs/_build/html/_sources/: closest_to_you.rst.txt  index.rst.txt  shop.services.rst.txt  shop.views.rst.txt
shop/: forms.py  models.py  urls.py
shop/migrations/: 0001_initial.py  0002_alter_order_total_price.py  0003_client_compensations_and_more.py
shop/models/: models.py
shop/services/: basket_service.py  checkout_service.py  order_service.py  purchase_service.py  workers.py
shop/static/shop/workers/: delivery.js
shop/templates/shop/clients/: basket.html  checkout_creditcard.html  checkout_transfer.html  finalize_purchase.html  order_failed.html  order_success.html
shop/templates/shop/users/: index.html
shop/templates/shop/workers/: complaint.html  delivery.html  (+1 more)
shop/tests/: test_functional.py  test_unit.py  test_unit_2.py
shop/views/: __init__.py  clients.py  users.py  workers.py
(+10 files in other folders)
