[tool.poetry]
name = "closest-to-you"
version = "0.1.0"
description = ""
authors = ["Aleksandr Shestakov <103767386+avtorgenii@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
pillow = "^11.1.0"
django-extensions = "^3.2.3"
docutils = "^0.21.2"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
model-bakery = "^1.20.1"
pytest = "8.3.4"
selenium = "4.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
